chore: Resolve Sonar warnings
- java:S5786: remove public modifiers from JUnit5 tests
- remove obsolete assertions
- add `@Override` annotations
- remove unused imports

related to #88